src/OpenPoseDotNet.Native/openpose/pose/poseGpuRenderer.h

#ifndef _CPP_OP_POSE_POSE_GPU_RENDERER_H_
#define _CPP_OP_POSE_POSE_GPU_RENDERER_H_

#include "../shared.h"

DLLEXPORT op::PoseGpuRenderer* op_PoseGpuRenderer_new(const op::PoseModel poseModel,
                                                      const std::shared_ptr<op::PoseExtractorNet>* poseExtractorNet,
                                                      const float renderThreshold,
                                                      const bool blendOriginalFrame,
                                                      const float alphaKeypoint,
                                                      const float alphaHeatMap,
                                                      const unsigned int elementToRender)
{
    return new op::PoseGpuRenderer(poseModel,
                                   *poseExtractorNet,
                                   renderThreshold,
                                   blendOriginalFrame,
                                   alphaKeypoint,
                                   alphaHeatMap,
                                   elementToRender);
}

DLLEXPORT void op_PoseGpuRenderer_delete(op::PoseGpuRenderer* renderer)
{
    delete renderer;
}

DLLEXPORT void op_PoseGpuRenderer_initializationOnThread(op::PoseGpuRenderer* renderer)
{
    renderer->initializationOnThread();
}

DLLEXPORT void op_PoseGpuRenderer_renderPose(op::PoseGpuRenderer* renderer,
                                             op::Array<float>* outputData,
                                             const op::Array<float>* poseKeypoints,
                                             const float scaleInputToOutput,
                                             const float scaleNetToOutput,
                                             int* item1,
                                             std::string** item2)
{
    auto& tmp_outputData = *outputData;
    const auto& tmp_poseKeypoints = *poseKeypoints;
    const auto ret = renderer->renderPose(tmp_outputData, tmp_poseKeypoints, scaleInputToOutput, scaleNetToOutput);
    *item1 = ret.first;
    *item2 = new std::string(ret.second);
}

DLLEXPORT void op_PoseGpuRenderer_setElementToRender(op::PoseGpuRenderer* renderer,
                                                     const int elementToRender)
{
    renderer->setElementToRender(elementToRender);
}

#endif